decode base64 encoded chemical strings before attempting conversion to fix issue loading cdx files.